# rlvr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  template.env
.claude/skills/pre-pr-check/: SKILL.md
.github/workflows/: ci.yml
.lavish/: debug-plan.html
configs/: debug_grpo_cpu.yaml  phase0_benchmark.yaml  phase0_passk.yaml  phase1_gsm8k_grpo_debug.yaml  phase1_rlvr_gsm8k_grpo.yaml  phase1_rlvr_gsm8k_math_grpo.yaml  phase1_rlvr_gsm8k_reinforce.yaml  phase3_mopd_gsm8k.yaml  rejection_sampling_gsm8k.yaml  sft_gsm8k_rejection_top2_curriculum.yaml  sft_gsm8k_rejection_top2_curriculum_sky.yaml
docs/: ARCHITECTURE.md  PHASES.md
experiments/: REGISTRY.md
scripts/: benchmark.py  download_model.sh  launch_phase1_sweep.py  make_progress_report.py  monitor_resources.py  pass_at_k.py  probe_batch_size.py  rejection_sampling_data_curation.py  train_grpo.py  train_mopd.py  train_sft.py
skypilot/: phase1_grpo_debug.yaml
src/qwen3_rlvr/: __init__.py  env.py
src/qwen3_rlvr/data/: __init__.py  aime.py  base.py  gsm8k.py  math.py  recipe.py
src/qwen3_rlvr/eval/: __init__.py  benchmark.py  gsm8k.py  pass_at_k.py  recipe_eval.py
src/qwen3_rlvr/generation/: __init__.py  prompts.py  rollout.py
src/qwen3_rlvr/logging/: __init__.py  artifacts.py  logger.py  resource_monitor.py  wandb_grpo.py  wandb_logger.py  wandb_sft.py
src/qwen3_rlvr/model/: __init__.py  load.py
src/qwen3_rlvr/rewards/: __init__.py  exact_match.py  extract.py
src/qwen3_rlvr/rl/: __init__.py  grpo.py  mopd.py  trainer.py
src/qwen3_rlvr/sft/: __init__.py  curation.py  curriculum.py  dataset.py  scheduler.py  trainer.py
src/qwen3_rlvr/viz/: progress_report.py
tests/: test_advantages.py  test_batched.py  test_data_types.py  test_extract.py  test_extract_extended.py  test_generate_batch.py  test_pass_at_k.py  test_recipe.py  test_resource_monitor.py
